# osi-runtime-mcp

./: .gitignore  LICENSE  README.md  osi-runtime.example.yaml  pyproject.toml
osi_runtime_mcp/: __init__.py  allowlist.py  audit.py  docker_client.py  redact.py  server.py  validation.py
osi_runtime_mcp/tools/: dump_python_stack.py  health_check_ptrace.py  list_services.py  read_metrics.py
scripts/: live_acceptance.py
tests/: conftest.py  test_audit.py  test_docker_client.py  test_dump_python_stack.py  test_list_services.py  test_read_metrics.py  test_redact.py  test_server.py  test_validation.py
tests/fixtures/: redact_corpus.py
