[project]
name = "osi-runtime-mcp"
version = "0.1.0"
description = "MCP server for live, read-only runtime introspection of Docker'd Python services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ryan Brennan" }]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
osi-runtime-mcp = "osi_runtime_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osi_runtime_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "S603", "S607"]  # asserts ok in tests; subprocess calls are validated
